self-hosted/ollama/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama-local
  namespace: ai
  labels:
    app: ollama-local
spec:
  type: ClusterIP
  selector:
    app: ollama-local
  ports:
    - name: ollama-local
      port: 11434
      protocol: TCP
      targetPort: 11434
